# Aditya-S.-Tawde

./: .env.example  .gitignore  .hintrc  CONTRIBUTING.md  README.md  SECURITY.md  aditya(1).md  aditya(2).md  aditya.md  blog.html  docker-compose.dev.yml  docker-compose.yml  index.html  pytest_verify.txt  render.yaml  script.js  setup_env.ps1  style.css
client/: .env.example  (+9 more)
server/: .env  .env.example  .gitignore  Dockerfile  app.py  build.sh  conftest.py  db.sqlite3  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  seed_db.py  tsconfig.json
server/backend/: settings.py  urls.py
server/contact/: urls.py  views.py
server/drizzle/: 0000_bumpy_the_initiative.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/portfolio/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
server/portfolio/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_education_techstack_alter_certification_options_and_more.py  0004_certification_image_url_alter_certification_image_and_more.py  0005_certification_description_project_category_and_more.py  0006_project_status_alter_project_category_and_more.py  0007_experience.py
server/portfolio/tests/: conftest.py  test_api.py  test_services.py
server/portfolio_backend/: settings.py  urls.py
server/src/: config.ts  index.ts
server/src/admin/: cms.tsx  resources.ts
server/src/db/: client.ts  dump.ts  migrate.ts  schema.ts  seed.ts
server/src/lib/: auth.ts  cache.ts  mailer.ts  queries.ts  sanitize.ts  serialize.ts
(+61 files in other folders)
